<resources>
    <string name="done">Done</string>
    <string name="Back">Back</string>
    <string name="OK">OK</string>
    <string name="edit">Edit</string>
    <string name="Cancel">Cancel</string>
    <string name="tagpictures">Select first,\nthen send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wifi">Wifi: </string>
    <string name="notconnected">3G/4G or Wi-Fi not available, verify your connection.</string>
    <string name="notavalidkodakwirelessnetwork">Unable to read QR code.  Please choose Manual Connect.</string>
    <string name="problemconnectingwifi">There was a problem connecting to the Kiosk.  Please try again.</string>
    <string name="nointernetconnection">3G/4G or Wi-Fi not available, verify your connection.</string>
    <string name="updatedMessage">This application needs to be updated.</string>
    <string name="nowificonnection">Tip: To avoid cellular data charges, we recommend \nchanging your phone settings to Wi-Fi.</string>
    <string name="donotaskagain">Don\'t Ask Again</string>
    <string name="of">of</string>
    <string name="selected">Selected</string>
    <string name="connectingtokiosk">Connecting to Kiosk</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="agree">I agree</string>
    <string name="donotagree">I don\'t agree</string>
    <string name="exithelp">Exit Help</string>
    <string name="losework">Are you sure? You will lose all your work.</string>
    <string name="nostores">No local stores found %%. Type in a postal code or city.</string>
    <string name="StoreFinder_CLOLite">No stores found %%.\n Do you want your product(s) shipped to home?</string>
    <string name="StoreFinder_ProblemFindingStore">There was a problem finding stores, please try again.</string>
    <string name="storeInformation">Store Information:</string>
    <string name="selected_set">Selected Set</string>
    <string name="selected_pictures">Selected Pictures</string>
    <string name="settings">Settings</string>
    <string name="Common_SampleText">Sample Text</string>
    <string name="maximum">Maximum</string>
    <string name="albums">Albums</string>
    <string name="earlier">and Earlier</string>
    <string name="earlieralbum">Earlier Photos</string>
    <string name="otheralbum">Other Photos</string>
    <string name="noimages">No pictures on the device.</string>
    <string name="sdcardnotmountedtitle">SD Card not found.</string>
    <string name="sdcardnotmountedmessage">External USB storage device found. Please remove cable from phone?</string>
    <string name="eulatitle">License Agreement</string>
    <string name="eulainstructions">To use this app, you must agree to the terms of the license.</string>
    <string name="eulabutton">Read License</string>
    <string name="agreetitle">Agree to Terms</string>
    <string name="selectall">Select All</string>
    <string name="deselectall">Deselect All</string>
    <string name="numselected">"Number Selected: "</string>
    <string name="selectatleastoneimage">Please select at least one picture.</string>
    <string name="savingtaggedimages">Saving selected images...</string>
	<string name="EULA">EULA</string>
    <string name="clear">Clear</string>
    <string name="addtags">Add Tags</string>
    <string name="removeall">Remove All</string>
    <string name="removealltaggedset">Do you want to clear all selections?</string>
    <string name="taggedset">Tagged Set</string>
    <string name="Clearalltags">Clear All Tags</string>
    <string name="save">Save</string>
    <string name="mainMenuVersion">Version </string>
    <string name="mainMenuCopyright"> © Eastman Kodak Company 2013, TM: Kodak</string>
    <string name="exitapplication">Do you wish to exit the application?</string>
    <string name="viewtaggedset">View selected,\nthen send</string>
    <string name="connectkiosk">Display all pictures\non kiosk</string>
	<string name="saveTaggedDialogText">Do you want to connect to the Kiosk?</string>
	<string name="getItHereButton">Hier herunterladen</string>
	<string name="GermanDiscontinuanceMessage">Es ist ein Update verfügbar, mit der Sie jetzt auch Aufträge online in ein Geschäft in Ihrer Nähe übermitteln können. Holen Sie sich jetzt die neue My Kodak Moments App hier</string>
    <string name="scanconnect">Scan Connect</string>
    <string name="scanconnectinstruction">Scan the code provided on the Kiosk.</string>
    <string name="scanconnectfail">Code scanning has failed. Please use manual connection.</string>
    <string name="scanconnectedtokiosk">Connected to the Kiosk:</string>
    <string name="scanconnectingtokiosk">Connecting to the Kiosk:</string>
    <string name="TakingTooLong">Taking too long?</string>
    <string name="disablePoorNetworkAvoidance">Auto Network Switching blocks Kiosk communication, please disable the Auto Network switch setting.</string>
    <string name="ssid">"Wifi name: "</string>
    <string name="password">Password:</string>
    <string name="connect">Connect</string>
    <string name="validwifiinfo">Please verify the network name and password match the Kiosk screen.  Please try again.</string>
    <string name="ManualConnect">Manual Connect</string>
    <string name="ManualConnectInstructions">Type in the code provided on the kiosk.</string>
    <string name="ChooseDialogTitle">Choose Kiosk Connection</string>
    <string name="nonetworkfound">No Kiosk networks found. Please contact store clerk for assistance.</string>
    <string name="nonetworkfound_short">No Kiosk networks found.</string>
    <string name="selectKiosk">Select Kiosk</string>
    <string name="manualinput">Go to manual</string>
    <string name="scanbarcode">Scan Barcode</string>
    <string name="kioskconnectinstructions">Please do not use your device during this operation.</string>
    <string name="connectingtokiosktitle">Connected to the Kiosk</string>
    <string name="connectioninformation">Please do not use your device during this operation\n Sending selected set only</string>
    <string name="WiFiUpload_LookAtKiosk">Please look at the Kiosk</string>
    <string name="disconnected">Disconnected</string>
    <string name="transfercomplete">Transfer complete.\n Wi-Fi Disconnected\n Selected Set Cleared.</string>
    <string name="analyticsPermission">Allow Cookies:</string>
    <string name="analyticPermissionsDescription">I agree to let Kodak Alaris use general tracking features to improve this software. No personal information will be used. (Optional)</string>
    <string name="findoutmore">Find out more</string>
    <string name="privacy">Privacy</string>
    <string name="privacyinstructions">To use this app, you must agree to the privacy policy.</string>
    <string name="agreeprivacy">Agree to policy</string>
    <string name="kioskconnect">Prints\n@ Kiosk</string>
    <string name="printphotos">Prints\n@ My Store</string>
    <string name="usageCharge">Using this application to print your photos may result in a cellular data usage charge.</string>
    <string name="cart">Cart</string>
    <string name="cartitems">Cart:</string>
    <string name="sendselectedstore">Send your order to the selected store? Have you verified your store and contact information?</string>
    <string name="pricelimit1">Items in shopping cart exceed the allowable cost for an order of this type. Please remove items to get below the </string>
    <string name="pricelimit2"> maximum order allowance.</string>
    <string name="addPics">Add Pics</string>
    <string name="buy">Buy</string>
    <string name="orderConfirmationEstimated">Taxes will be added to your order when you pickup.</string>
    <string name="OrderSummary_TaxesS2H">Taxes will be calculated at payment processing.</string>
    <string name="orderSubtotal">Order Subtotal*: </string>
    <string name="remove">Remove</string>
    <string name="print">print</string>
    <string name="items">items</string>
    <string name="OrderSummary_Coupons">Coupons</string>
    <string name="OrderSummary_ShippingAndHandling">Shipping and Handling: </string>
    <string name="N2RShoppingCart_DestinationStore"> Pick up in store</string>
    <string name="N2RShoppingCart_DestinationHome">Home Delivery</string>
    <string name="N2RShoppingCart_SelectStore">Please select a store to continue shopping.</string>
    <string name="Common_LoseAllWorkCart">There are items in your cart. Are you sure you want to start over?</string>
    <string name="N2RShoppingCart_MakeMore">Continue Shopping</string>
    <string name="Home_LoseAllWorkCart">Are you sure you want to start over? You will lose all your work.</string>
	<string name="NoStore_Price">Select a store to see price information</string>
    <string name="NoDeliver_Price">Select a Delivery option to see price information</string>
    <string name="sendYourOrderTo">Send your order to:</string>
    <string name="N2RShoppingCart_TooExpensive">Maximum cart value of %s reached, please remove items.</string>
    <string name="N2RShoppingCart_NotEnoughOrdered">You must order at least %s. Please add more products to continue.</string>
    <string name="sendingOrder">Sending Order</string>
    <string name="upload1">Uploading </string>
    <string name="problemSendingOrder">Oops, our servers hiccupped, wait a minute and try again.</string>
    <string name="orderConfirmationTitle">Order Confirmation</string>
    <string name="orderConfirmationEmail">Confirmation e-mail sent to:</string>
    <string name="orderConfirmationID">Order ID:</string>
    <string name="orderConfirmationTimeSent">Order sent:</string>
    <string name="orderConfirmationSubtotal">*Est. Subtotal:</string>
    <string name="orderConfirmationStoreTitle">Order sent for pickup at:</string>
    <string name="orderConfirmationDetails">Order Details</string>
    <string name="orderConfirmationPrints">print(s)</string>
    <string name="newOrder">New Order</string>
    <string name="orderid">Order ID:</string>
    <string name="N2RShoppingCart_ShippingInformationTitle">Shipping Address:</string>
    <string name="defaultprintsize">Default Print Size:</string>
    <string name="name">Name</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="streetaddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="findstores">Finding stores near you</string>
    <string name="products">Products</string>
    <string name="zipcode">Zipcode</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email:</string>
    <string name="setup">Setup</string>
    <string name="previousOrders">Previous Orders:</string>
    <string name="date">Date</string>
    <string name="orderID">Order ID</string>
    <string name="Image">image</string>
    <string name="edits">Edits</string>
    <string name="size4x6">4 x 6</string>
    <string name="size5x7">5 x 7</string>
    <string name="size8x10">8 x 10</string>
    <string name="zero">0</string>
    <string name="privacyTitle">Privacy Policy</string>
    <string name="readPrivacyButton">Read Policy</string>
    <string name="analyticPermissionsDescNew">I agree to let Kodak Alaris use general tracking features to improve this software. No personal information will be used. (Optional)</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="automaticUpload2Albums">Automatic Upload to Albums</string>
    <string name="wmc_share">Walmart photocentre login:</string>
    <string name="share_account_address">Sign-in Email:</string>
    <string name="share_checkbox">Upload all pictures in this order to my Walmart Photocenter albums</string>
    <string name="sendemailremind">Please send me e-mail from Kodak Alaris about consumer products,offer,and service</string>
</resources>