<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <ProgressBar
        android:id="@+id/signin_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wmc_share"
        android:textColor="#FBBA06"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/share_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_text"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_account_address"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/share_email_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_account"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/share_email_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:password="true"
            android:singleLine="true"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auto_upload_checkbox_part"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_password"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/auto_upload_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automaticUpload2Albums"
            android:textSize="18dp"
            android:textColor="#FBBA06" />

        <CheckBox
            android:id="@+id/share_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_button"
            android:text="@string/share_checkbox"
            android:textColor="#c2c2c2"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>