<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/quantitysizebar" 
    android:background="#FEB415" >

    <com.ekc.kodakprintmaker.QntWidget
        android:id="@+id/qnt1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:checked="true"
        android:gravity="center|left"
        android:paddingRight="10dip"
        android:text="@string/size4x6"
        android:textColor="#000000"
        android:textStyle="bold" >
    </com.ekc.kodakprintmaker.QntWidget>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/size4x6" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size5x7" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size8x10" />
    </RadioGroup>

    <Button
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:text="@string/edits" />

</LinearLayout>