<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rela_legal">

     <ScrollView
        android:id="@+id/scrollViewlegal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbarFadeDuration="2000000"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scrollbarvertical" >
    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent" >
    <TextView
        android:id="@+id/txt_licenseagreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/eulatitle"
        android:textColor="#c2c2c2"
        android:textSize="18dp" />

    <Button 
        android:id="@+id/btn_readLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_licenseagreement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:minHeight="35dp"
        android:minWidth="220dp"
        android:text="@string/eulabutton"
        android:background="@drawable/back_button" />

    <TextView
        android:id="@+id/txt_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_readLicense"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/privacyTitle"
        android:textColor="#c2c2c2"
        android:textSize="18dp" />

    <Button 
        android:id="@+id/btn_readPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_privacyPolicy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:minHeight="35dp"
        android:minWidth="220dp"
        android:text="@string/readPrivacyButton"
        android:background="@drawable/back_button" />
    
    <CheckBox
        android:id="@+id/checkOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_readPolicy"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:button="@drawable/checkbox_button"
        android:focusable="false"
        android:checked="true"
        android:visibility="gone"
        android:text="@string/analyticPermissionsDescNew"
        android:textColor="#c2c2c2"
        android:textSize="16dp" />
    
    <CheckBox
        android:id="@+id/checkTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkOne"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:button="@drawable/checkbox_button"
        android:focusable="true"
        android:paddingLeft="48dp"
        android:checked="true"
        android:visibility="gone"
        android:text="@string/sendemailremind"
        android:textColor="#c2c2c2"
        android:textSize="16dp" />
    
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>