<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/previousordersrl" >

    <TextView
        android:id="@+id/analyticPermissionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/findoutmorebutton"
        android:layout_alignParentLeft="true"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/analyticsPermission"
        android:textColor="#FBBA06"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/findoutmorebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/analyticPermissionTV"
        android:background="@drawable/large_back_button"
        android:minHeight="35dp"
        android:minWidth="220dp"
        android:text="@string/findoutmore"
        android:textColor="#3c3c3c"
        android:textSize="16dp"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/analyticsCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findoutmorebutton"
        android:layout_centerHorizontal="true"
        android:button="@drawable/checkbox_button"
        android:focusable="false"
        android:paddingLeft="48dp"
        android:text="@string/analyticPermissionsDescription"
        android:textColor="#c2c2c2"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/previousOrdersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/previousOrders"
        android:textColor="#FBBA06"
        android:textSize="18dp" />

    <LinearLayout 
        android:id="@+id/layout_previoustext"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/previousOrdersLabel"
        android:weightSum="1"
        android:layout_gravity="center" >
            <TextView
                android:id="@+id/orderDateTV" 
                android:text="@string/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#7f7f7f"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:layout_weight="0.6"
                android:layout_marginLeft="20dp" />
            
            <TextView 
                android:id="@+id/orderIDTV"
                android:text="@string/orderID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#7f7f7f"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:layout_marginLeft="20dp" />
        </LinearLayout>
    
    <LinearLayout
        android:id="@+id/previousOrderLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout_previoustext"
        android:orientation="vertical" >
        
    </LinearLayout>

</RelativeLayout>