<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navigationbarbackground"
    android:minHeight="35dp" >

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/totalSelectedTextView"
        android:layout_marginRight="3dp"
        android:background="@drawable/next_button"
        android:minHeight="35dp"
        android:minWidth="135dp"
        android:text="@string/next"
        android:textColor="#3C3C3C"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/totalSelectedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FBBA06"
        android:visibility="gone" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back_button"
        android:minHeight="35dp"
        android:minWidth="135dp"
        android:text="@string/Back"
        android:textColor="#3C3C3C"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/headerBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/backButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/backButton"
        android:gravity="center|center_horizontal"
        android:text="@string/taggedset"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#C2C2C2"
        android:textSize="18dp" />

</RelativeLayout>