<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navigationbarbackground"
    android:minHeight="36dp" >

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
		android:layout_alignParentRight="true"
		android:visibility="gone"
		android:src="@drawable/back_button"
		android:minHeight="36dp"/>

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/Image"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logokodaksmall" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/back_button"
        android:minHeight="36dp"
        android:minWidth="135dp"
        android:text="@string/Back"
        android:textColor="#3C3C3C"
        android:textSize="14dp"
        android:visibility="gone" />

</RelativeLayout>