<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navigationbarbackground"
    android:minHeight="36dp" >

    <Button
        android:id="@+id/slideMenuOpen_btn"
        android:layout_width="@dimen/head_min_height"
        android:layout_height="@dimen/head_min_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/hamburger"
        android:visibility="invisible" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/next_button"
        android:minHeight="36dp"
        android:minWidth="135dp"
        android:text="@string/next"
        android:textColor="#3C3C3C"
        android:textSize="14dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/Image"
        android:src="@drawable/logokodaksmall"
        android:visibility="gone" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/back_button"
        android:minHeight="36dp"
        android:minWidth="135dp"
        android:text="@string/Back"
        android:textColor="#3C3C3C"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/backButton"
        android:layout_alignTop="@+id/backButton"
        android:layout_toLeftOf="@+id/nextButton"
        android:layout_toRightOf="@+id/backButton" >

        <TextView
            android:id="@+id/headerBarText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:ellipsize="middle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/albums"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#C2C2C2"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/totalSelectedTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/selected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FBBA06"
            android:textSize="18dp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>